force-app/main/default/objects/COM_TermsandConditions__c/COM_TermsandConditions__c.object-meta.xml
<CustomObject>
    <label>Terms and Conditions</label>
    <nameField>
        <displayFormat>T&amp;C-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>