force-app/main/default/objects/COM_TermsandConditions__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PKG</fullName>
            </value>
            <value>
                <fullName>CGL</fullName>
            </value>
            <value>
                <fullName>Cyber PKG</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>