force-app/main/default/objects/COM_TermsandConditions__c/fields/TnCKOR__c.field-meta.xml
<CustomField>
    <fullName>TnCKOR__c</fullName>
    <label>T&amp;C(KOR)</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>