force-app/main/default/objects/COM_TermsandConditions__c/fields/TnCNameKOR__c.field-meta.xml
<CustomField>
    <fullName>TnCNameKOR__c</fullName>
    <label>T&amp;C Name(KOR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>