force-app/main/default/objects/COM_TermsandConditions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Section__c</columns>
    <columns>TnCNameKOR__c</columns>
    <columns>TnCKOR__c</columns>
    <columns>TnCNameENG__c</columns>
    <columns>TnCENG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>